--- a/pom.xml
+++ b/pom.xml
@@ -38,19 +38,19 @@
             <artifactId>scijava-log-slf4j</artifactId>
             <version>1.0.5</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.scijava/scijava-ui-swing -->
-        <dependency>
-            <groupId>org.scijava</groupId>
-            <artifactId>scijava-ui-swing</artifactId>
-            <version>0.13.2</version>
-        </dependency>
-
 
         <!-- https://mvnrepository.com/artifact/log4j/log4j -->
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
             <version>1.2.17</version>
+        </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
